--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "kartik-v/yii2-widget-select2": "^2.2",
         "cinghie/yii2-multilanguage": "^2.0",
         "mihaildev/yii2-ckeditor": "^1.0",
-        "mihaildev/yii2-elfinder": "^1.3"
+        "mihaildev/yii2-elfinder": "^1.3",
+        "kartik-v/yii2-widget-datepicker": "^1.4"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
