--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "cinghie/yii2-multilanguage": "^2.0",
         "mihaildev/yii2-ckeditor": "^1.0",
         "mihaildev/yii2-elfinder": "^1.3",
-        "kartik-v/yii2-widget-datepicker": "^1.4"
+        "kartik-v/yii2-widget-datepicker": "^1.4",
+        "hail812/yii2-adminlte3": "~1.1"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
