--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "mihaildev/yii2-elfinder": "^1.3",
         "kartik-v/yii2-widget-datepicker": "^1.4",
         "hail812/yii2-adminlte3": "~1.1",
-        "kv4nt/yii2-owl-carousel2": "^1.0"
+        "kv4nt/yii2-owl-carousel2": "^1.0",
+        "tugmaks/yii2-jivosite": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
