--- a/composer.json
+++ b/composer.json
@@ -29,14 +29,7 @@
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
-        "yiisoft/yii2-gii": "~2.2.0",
-        "yiisoft/yii2-faker": "~2.0.0",
-        "codeception/codeception": "^4.0",
-        "codeception/module-asserts": "^1.0",
-        "codeception/module-yii2": "^1.0",
-        "codeception/module-filesystem": "^1.0",
-        "codeception/verify": "~0.5.0 || ~1.1.0",
-        "symfony/browser-kit": ">=2.7 <=4.2.4"
+        "yiisoft/yii2-gii": "~2.2.0"
     },
     "config": {
         "process-timeout": 1800,
@@ -47,6 +40,7 @@
             "yiisoft/yii2-composer": true
         }
     },
+
     "repositories": [
         {
             "type": "composer",
